--- a/eas.json
+++ b/eas.json
@@ -3,19 +3,24 @@
     "version": ">= 3.7.1"
   },
   "build": {
+    "local:simulator": {
+      "developmentClient": true,
+      "ios": { "simulator": true },
+      "env": { "APP_VARIANT": "local", "resourceClass": "m1-medium" },
+      "channel": "local"
+    },
     "local": {
       "developmentClient": true,
       "distribution": "internal",
       "env": { "APP_VARIANT": "local" },
       "channel": "local",
-      "ios": {
-        "resourceClass": "m1-medium"
-      }
+      "ios": { "resourceClass": "m1-medium" }
     },
     "dev": {
       "distribution": "internal",
       "env": { "APP_VARIANT": "dev" },
-      "channel": "dev"
+      "channel": "dev",
+      "ios": { "resourceClass": "m1-medium" }
     },
     "production": {
       "env": { "APP_VARIANT": "production" },
