--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "xam-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "author": {
+    "name": "spotlight-xam"
+  },
   "scripts": {
     "start": "expo start --dev-client",
     "dev": "expo start --dev-client",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "test:android:": "node scripts/downloadDevClient.js &&  detox test -c android",
+    "test:ios": "node scripts/downloadDevClient.js && detox test -c ios"
   },
   "dependencies": {
     "@babel/core": "^7.12.9",
@@ -43,9 +48,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@config-plugins/detox": "^5.0.1",
     "@types/react": "~18.0.14",
     "@types/uuid": "^9.0.1",
-    "typescript": "^4.9.4"
+    "detox": "^20.7.0",
+    "jest": "^29.5.0",
+    "typescript": "^4.9.4",
+    "yauzl": "^2.10.0"
   },
   "private": true
 }
