--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,7 @@ web-build/
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
 
-e2e/dev-client/*
+e2e/dev-client
+e2e/build
+
+.env
