--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "eslint . --fix",
-    "test:android:": "node scripts/downloadDevClient.js &&  detox test -c android",
-    "test:ios": "node scripts/downloadDevClient.js && detox test -c ios"
+    "build": "expo export --output-dir ./build --platform all",
+    "test:start": "tsc --build ./e2e && node ./e2e/build/start",
+    "test": "npm run test:start && detox test",
+    "test:generate": "tsc --build ./e2e && node ./e2e/build/generate"
   },
   "dependencies": {
     "@babel/core": "^7.12.9",
@@ -49,12 +51,21 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@config-plugins/detox": "^5.0.1",
+    "@tsconfig/node14": "^1.0.3",
+    "@types/connect": "^3.4.35",
+    "@types/follow-redirects": "^1.14.1",
     "@types/react": "~18.0.14",
+    "@types/unzipper": "^0.10.5",
     "@types/uuid": "^9.0.1",
+    "@types/ws": "^8.5.4",
+    "archiver": "^5.3.1",
+    "chalk": "^4",
     "detox": "^20.7.0",
+    "follow-redirects": "^1.15.2",
     "jest": "^29.5.0",
+    "ora": "^5.4.0",
     "typescript": "^4.9.4",
-    "yauzl": "^2.10.0"
+    "unzipper": "^0.10.11"
   },
   "private": true
 }
