--- a/.github/workflows/mobile-release.yml
+++ b/.github/workflows/mobile-release.yml
@@ -16,6 +16,8 @@ jobs:
       - name: 🏗 Setup Expo
         uses: expo/expo-github-action@v7
         with:
+          eas-version: latest
+          expo-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: 📦 Install dependencies
