--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "archiver": "^5.3.1",
     "chalk": "^4",
     "detox": "^20.7.0",
+    "dotenv": "^16.0.3",
     "follow-redirects": "^1.15.2",
     "jest": "^29.5.0",
     "ora": "^5.4.0",
