--- a/package.json
+++ b/package.json
@@ -53,20 +53,20 @@
     "@config-plugins/detox": "^5.0.1",
     "@tsconfig/node14": "^1.0.3",
     "@types/connect": "^3.4.35",
+    "@types/decompress": "^4.2.4",
     "@types/follow-redirects": "^1.14.1",
     "@types/react": "~18.0.14",
-    "@types/unzipper": "^0.10.5",
     "@types/uuid": "^9.0.1",
     "@types/ws": "^8.5.4",
     "archiver": "^5.3.1",
     "chalk": "^4",
+    "decompress": "^4.2.1",
     "detox": "^20.7.0",
     "dotenv": "^16.0.3",
     "follow-redirects": "^1.15.2",
     "jest": "^29.5.0",
     "ora": "^5.4.0",
-    "typescript": "^4.9.4",
-    "unzipper": "^0.10.11"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
