--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "dayjs": "^1.11.8",
     "eslint": "^8.25.0",
     "eslint-config-universe": "^11.1.0",
     "expo": "~48.0.10",
